@@ -23,6 +23,9 @@ PyKota NEWS :
        
     - 1.23alpha9 :   
     
+        - Introduced the new 'striptitle' directive to remove ugly prefixes
+          from print job's titles whenever a new print job is submitted.
+          
         - Fixed internal SNMP accounter for printers which only have a life time
           page counter, and not a volatile page counter.
           
